--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -11,9 +11,8 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
-        "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9",
-        "fruitcake/laravel-cors": "^3.0"
+        "laravel/sanctum": "4.0",
+        "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
