--- a/laravel/.env
+++ b/laravel/.env
@@ -28,7 +28,7 @@ DB_DATABASE=mindfulpath
 DB_USERNAME=root
 DB_PASSWORD=
 
-SANCTUM_STATEFUL_DOMAINS=localhost:4200,127.0.0.1:4200
+SANCTUM_STATEFUL_DOMAINS=localhost:4200,127.0.0.1:4200,localhost
 SESSION_DRIVER=cookie
 SESSION_DOMAIN=localhost
 
